# itmo_entrance_exam_tg_bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
html/: Искусственный интеллект.html  Управление ИИ-продуктами_AI Product.html
html/Искусственный интеллект_files/: 1c6ad1ff3e90862a.css  2449-4ed3b19a6f3df68f.js  5180-282c4b68d85afd07.js  9281-e3908df4804541fa.js  _ssgManifest.js  d9ad7fe42b0f6de5.css  fb767030398ff969.css  framework-2e65b1d94f0fa57a.js  webpack-d7e2ac15c55d1674.js
html/Управление ИИ-продуктами_AI Product_files/: 2259-42c8e4296b6e8d71.js  5757-d6e09b793f52a0ef.js  7043-ae285405cf0eb1d2.js  7362-f69ad6725d59240f.js  8ac349c3fe6ae33c.css  9410-4b66bf21497ab4ad.js  9800-65dded7b08de07b0.js  9910-caf2bbd5493f78c3.js  [slug]-36ec1303a87087e1.js  _app-4f01ed41dc494f5c.js  _buildManifest.js  a119a4c8de86fe67.css  main-e5eda20c8fa66868.js
src/: __init__.py  bot.py  config.py  database.py  parser.py  pdf_parser.py  rag.py  utils.py
tests/: conftest.py
utils/: parse_data.py
